<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="215dp"
    android:layout_gravity="center"
    android:background="@drawable/popup_shape"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pause_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pause"
        android:textSize="24sp" />

    <Button
        android:id="@+id/resume_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/resume"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/main_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/main_menu"
        android:textAllCaps="false" />
</LinearLayout>