<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="300dp"
    android:minWidth="300dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:background="@drawable/popup_shape"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/won_message"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/nextLevelBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/next_level"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/playAgainBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:onClick="onResetBtnClick"
        android:text="@string/play_again"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/mainMenuBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/main_menu"
        android:textAllCaps="false" />
</LinearLayout>